--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,9 @@ dependencies = [
 ]
 dynamic = ["version", "description"]
 
+[project.optional-dependencies]
+test = ["tox ~=3.3"]
+
 [project.urls]
 Home = "https://github.com/deepyaman/kedro_argo"
 
