test: copy tests for extra param handling in Kedro

--- a/tox.ini
+++ b/tox.ini
@@ -18,6 +18,7 @@ commands = pytest --cov --cov-config={toxinidir}/.coveragerc {posargs:-vv}
 deps =
     pytest
     pytest-cov
+    pytest-mock
 depends =
     report: py{310,39,38}
 changedir = tests
